--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
 
         <header>
             <div class="center">
-                <img id="foto-perfil" src="./img/ecm1.png" alt="">
+                <img id="foto-perfil" src="./ecm1.png" alt="">
             </div>
             <h1>Evandro César Moreira</h1>
             <h1>Professor</h1>
         </header>
-<h1>
         <main>
             <section>
                 
@@ -80,7 +79,6 @@
                 </p>
             </section>
         </main>
-</h1>
         <footer>
             <a href="#" target="_blank" rel="noopener noreferrer">
                 <img src="./img/github.svg" alt="Github">
@@ -99,7 +97,7 @@
 
     <!-- Script para alternar imagens automaticamente -->
     <script>
-        const imagens = ["./img/ecm1.png", "./img/ecm2.JPG", "./img/ecm3.jpg"];
+        const imagens = ["./ecm1.png", "./ecm2.JPG", "./ecm3.jpg"];
         let indice = 0;
         const imgElemento = document.getElementById("foto-perfil");
 
