--- a/index.html
+++ b/index.html
@@ -81,15 +81,15 @@
         </main>
         <footer>
             <a href="#" target="_blank" rel="noopener noreferrer">
-                <img src="./img/github.svg" alt="Github">
+                <img src="./github.svg" alt="Github">
                 <p>Github</p>
             </a>
             <a href="#" target="_blank" rel="noopener noreferrer">
-                <img src="./img/linkedin.svg" alt="Linkedin">
+                <img src="./linkedin.svg" alt="Linkedin">
                 <p>Linkedin</p>
             </a>
             <a href="#" target="_blank" rel="noopener noreferrer">
-                <img src="./img/youtube.svg" alt="Youtube">
+                <img src="./youtube.svg" alt="Youtube">
                 <p>Youtube</p>
             </a>
         </footer>
